tests/ui/imports/reexports.stderr
error[E0364]: `foo` is private, and cannot be re-exported
  --> $DIR/reexports.rs:8:17
   |
LL |         pub use super::foo;
   |                 ^^^^^^^^^^
   |
note: consider marking `foo` as `pub` in the imported module
  --> $DIR/reexports.rs:8:17
   |
LL |         pub use super::foo;
   |                 ^^^^^^^^^^

error[E0603]: module import `foo` is private
  --> $DIR/reexports.rs:36:22
   |
LL |     use crate::b::a::foo::S;
   |                      ^^^ private module import
   |
note: the module import `foo` is defined here...
  --> $DIR/reexports.rs:24:17
   |
LL |         pub use super::foo; // This is OK since the value `foo` is visible enough.
   |                 ^^^^^^^^^^
note: ...and refers to the module `foo` which is defined here
  --> $DIR/reexports.rs:19:5
   |
LL |     mod foo {
   |     ^^^^^^^

error[E0603]: module import `foo` is private
  --> $DIR/reexports.rs:37:22
   |
LL |     use crate::b::b::foo::S as T;
   |                      ^^^ private module import
   |
note: the module import `foo` is defined here...
  --> $DIR/reexports.rs:29:17
   |
LL |         pub use super::*; // This is also OK since the value `foo` is visible enough.
   |                 ^^^^^^^^
note: ...and refers to the module `foo` which is defined here
  --> $DIR/reexports.rs:19:5
   |
LL |     mod foo {
   |     ^^^^^^^

warning: unused import: `super::foo`
  --> $DIR/reexports.rs:8:17
   |
LL |         pub use super::foo;
   |                 ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/reexports.rs:1:9
   |
LL | #![warn(unused_imports)]
   |         ^^^^^^^^^^^^^^

warning: glob import doesn't reexport anything with visibility `pub` because no imported item is public enough
  --> $DIR/reexports.rs:11:17
   |
LL |         pub use super::*;
   |                 ^^^^^^^^
   |
note: the most public imported item is `pub(in crate::a)`
  --> $DIR/reexports.rs:11:17
   |
LL |         pub use super::*;
   |                 ^^^^^^^^
   = help: reduce the glob import's visibility or increase visibility of imported items

warning: unused import: `super::*`
  --> $DIR/reexports.rs:11:17
   |
LL |         pub use super::*;
   |                 ^^^^^^^^

error: aborting due to 3 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0364, E0603.
For more information about an error, try `rustc --explain E0364`.
